@@ -30,32 +30,44 @@ import org.junit.Test;
 public class WhiteBoxTest {
 
 	@Test
-	public void testFindMethod_classContainingMethodWithNoParameters() throws Exception {
-		Method expected = ClassWithSeveralMethodsWithSameNameOneWithoutParameters.class.getMethod("getDouble");
-		Method actual = Whitebox.findMethodOrThrowException(ClassWithSeveralMethodsWithSameNameOneWithoutParameters.class, "getDouble");
+	public void testFindMethod_classContainingMethodWithNoParameters()
+			throws Exception {
+		Method expected = ClassWithSeveralMethodsWithSameNameOneWithoutParameters.class
+				.getMethod("getDouble");
+		Method actual = Whitebox.findMethodOrThrowException(
+				ClassWithSeveralMethodsWithSameNameOneWithoutParameters.class,
+				"getDouble");
 		assertEquals(expected, actual);
 	}
 
 	@Test
-	public void testFindMethod_classContainingOnlyMethodsWithParameters() throws Exception {
+	public void testFindMethod_classContainingOnlyMethodsWithParameters()
+			throws Exception {
 		try {
-			Whitebox.findMethodOrThrowException(ClassWithSeveralMethodsWithSameName.class, "getDouble");
+			Whitebox.findMethodOrThrowException(
+					ClassWithSeveralMethodsWithSameName.class, "getDouble");
 			fail("Should throw runtime exception!");
 		} catch (RuntimeException e) {
-			assertTrue("Error message did not match", e.getMessage().contains(
-					"Several matching methods found, please specify the argument parameter types"));
+			assertTrue(
+					"Error message did not match",
+					e
+							.getMessage()
+							.contains(
+									"Several matching methods found, please specify the argument parameter types"));
 		}
 	}
 
 	@Test
 	public void testFindMethod_noMethodFound() throws Exception {
 		try {
-			Whitebox.findMethodOrThrowException(ClassWithSeveralMethodsWithSameName.class, "getDouble2");
+			Whitebox.findMethodOrThrowException(
+					ClassWithSeveralMethodsWithSameName.class, "getDouble2");
 			fail("Should throw runtime exception!");
 		} catch (RuntimeException e) {
-			assertEquals("Error message did not match",
-					"No method found with name 'getDouble2' with argument types: [ ] in class org.powermock.ClassWithSeveralMethodsWithSameName", e
-							.getMessage());
+			assertEquals(
+					"Error message did not match",
+					"No method found with name 'getDouble2' with argument types: [ ] in class org.powermock.ClassWithSeveralMethodsWithSameName",
+					e.getMessage());
 		}
 	}
 
@@ -63,8 +75,10 @@ public class WhiteBoxTest {
 	public void testGetInternalState_object() throws Exception {
 		ClassWithInternalState tested = new ClassWithInternalState();
 		tested.increaseInteralState();
-		Object internalState = Whitebox.getInternalState(tested, "internalState");
-		assertTrue("InternalState should be instanceof Integer", internalState instanceof Integer);
+		Object internalState = Whitebox.getInternalState(tested,
+				"internalState");
+		assertTrue("InternalState should be instanceof Integer",
+				internalState instanceof Integer);
 		assertEquals(1, internalState);
 	}
 
@@ -72,7 +86,8 @@ public class WhiteBoxTest {
 	public void testGetInternalState_parmaterizedType() throws Exception {
 		ClassWithInternalState tested = new ClassWithInternalState();
 		tested.increaseInteralState();
-		int internalState = Whitebox.getInternalState(tested, "internalState", tested.getClass(), 0);
+		int internalState = Whitebox.getInternalState(tested, "internalState",
+				tested.getClass(), 0);
 		assertEquals(1, internalState);
 	}
 
@@ -88,76 +103,121 @@ public class WhiteBoxTest {
 	public void testSetInternalState_superClass() throws Exception {
 		ClassWithSubclassThatHasInternalState tested = new ClassWithSubclassThatHasInternalState();
 		tested.increaseInteralState();
-		Whitebox.setInternalState(tested, "anotherInternalState", 2, ClassWithInternalState.class);
+		Whitebox.setInternalState(tested, "anotherInternalState", 2,
+				ClassWithInternalState.class);
 		assertEquals(2, tested.getAnotherInternalState());
 	}
 
 	@Test
 	public void testGetInternalState_superClass_object() throws Exception {
 		ClassWithSubclassThatHasInternalState tested = new ClassWithSubclassThatHasInternalState();
-		Object internalState = Whitebox.getInternalState(tested, "internalState", ClassWithInternalState.class);
+		Object internalState = Whitebox.getInternalState(tested,
+				"internalState", ClassWithInternalState.class);
 		assertEquals(0, internalState);
 	}
 
 	@Test
-	public void testGetInternalState_superClass_parameterized() throws Exception {
+	public void testGetInternalState_superClass_parameterized()
+			throws Exception {
 		ClassWithSubclassThatHasInternalState tested = new ClassWithSubclassThatHasInternalState();
-		int internalState = Whitebox.getInternalState(tested, "internalState", ClassWithInternalState.class, 100);
+		int internalState = Whitebox.getInternalState(tested, "internalState",
+				ClassWithInternalState.class, 100);
 		assertEquals(0, internalState);
 	}
 
 	@Test
 	public void testInvokePrivateMethod_primtiveType() throws Exception {
-		assertTrue((Boolean) Whitebox.invokeMethod(new ClassWithPrivateMethods(), "primitiveMethod", 8.2));
+		assertTrue((Boolean) Whitebox.invokeMethod(
+				new ClassWithPrivateMethods(), "primitiveMethod", 8.2));
 	}
 
 	@Test
 	public void testInvokePrivateMethod_primtiveType_Wrapped() throws Exception {
-		assertTrue((Boolean) Whitebox.invokeMethod(new ClassWithPrivateMethods(), "primitiveMethod", new Double(8.2)));
+		assertTrue((Boolean) Whitebox.invokeMethod(
+				new ClassWithPrivateMethods(), "primitiveMethod", new Double(
+						8.2)));
 	}
 
 	@Test
 	public void testInvokePrivateMethod_wrappedType() throws Exception {
-		assertTrue((Boolean) Whitebox.invokeMethod(new ClassWithPrivateMethods(), "wrappedMethod", new Double(8.2)));
+		assertTrue((Boolean) Whitebox
+				.invokeMethod(new ClassWithPrivateMethods(), "wrappedMethod",
+						new Double(8.2)));
 	}
 
 	@Test
-	public void testInvokePrivateMethod_wrappedType_primitive() throws Exception {
-		assertTrue((Boolean) Whitebox.invokeMethod(new ClassWithPrivateMethods(), "wrappedMethod", 8.2));
+	public void testInvokePrivateMethod_wrappedType_primitive()
+			throws Exception {
+		assertTrue((Boolean) Whitebox.invokeMethod(
+				new ClassWithPrivateMethods(), "wrappedMethod", 8.2));
 	}
 
 	@Test
-	public void testMethodWithPrimitiveIntAndString_primitive() throws Exception {
-		assertEquals("My int value is: " + 8, (String) Whitebox.invokeMethod(new ClassWithPrivateMethods(), "methodWithPrimitiveIntAndString", 8,
-				"My int value is: "));
+	public void testMethodWithPrimitiveIntAndString_primitive()
+			throws Exception {
+		assertEquals("My int value is: " + 8, (String) Whitebox.invokeMethod(
+				new ClassWithPrivateMethods(),
+				"methodWithPrimitiveIntAndString", 8, "My int value is: "));
 	}
 
 	@Test
 	public void testMethodWithPrimitiveIntAndString_Wrapped() throws Exception {
-		assertEquals("My int value is: " + 8, (String) Whitebox.invokeMethod(new ClassWithPrivateMethods(), "methodWithPrimitiveIntAndString",
-				new Integer(8), "My int value is: "));
+		assertEquals("My int value is: " + 8, (String) Whitebox.invokeMethod(
+				new ClassWithPrivateMethods(),
+				"methodWithPrimitiveIntAndString", new Integer(8),
+				"My int value is: "));
 	}
 
 	@Test
-	public void testMethodWithPrimitiveAndWrappedInt_primtive_wrapped() throws Exception {
-		assertEquals(17, Whitebox.invokeMethod(new ClassWithPrivateMethods(), "methodWithPrimitiveAndWrappedInt", new Class[] { int.class,
-				Integer.class }, 9, new Integer(8)));
+	public void testMethodWithPrimitiveAndWrappedInt_primtive_wrapped()
+			throws Exception {
+		assertEquals(17, Whitebox.invokeMethod(new ClassWithPrivateMethods(),
+				"methodWithPrimitiveAndWrappedInt", new Class[] { int.class,
+						Integer.class }, 9, new Integer(8)));
 	}
-	
+
 	@Test
 	public void testStaticState() {
 		int expected = 123;
-		Whitebox.setInternalState(ClassWithInternalState.class, "staticState", expected);
+		Whitebox.setInternalState(ClassWithInternalState.class, "staticState",
+				expected);
 		assertEquals(expected, ClassWithInternalState.getStaticState());
-		assertEquals(expected, Whitebox.getInternalState(ClassWithInternalState.class, "staticState"));
+		assertEquals(expected, Whitebox.getInternalState(
+				ClassWithInternalState.class, "staticState"));
 	}
 
-	@Test(expected=RuntimeException.class)
+	@Test(expected = RuntimeException.class)
 	public void testStaticFinalState() {
-		Whitebox.setInternalState(ClassWithInternalState.class, "staticFinalState", 123);
+		Whitebox.setInternalState(ClassWithInternalState.class,
+				"staticFinalState", 123);
 		fail("Static final is not possible to change");
 	}
-	
+
+	/**
+	 * Verifies that the http://code.google.com/p/powermock/issues/detail?id=6
+	 * is fixed.
+	 * 
+	 */
+	@Test(expected = IllegalArgumentException.class)
+	public void testInvokeMethodWithNullParameter() throws Exception {
+		Whitebox.invokeMethod(null, "method");
+	}
+
+	@Test(expected = IllegalArgumentException.class)
+	public void testInvokeConstructorWithNullParameter() throws Exception {
+		Whitebox.invokeConstructor(null, "constructor");
+	}
+
+	@Test(expected = IllegalArgumentException.class)
+	public void testGetInternalWithNullParameter() throws Exception {
+		Whitebox.getInternalState(null, "state");
+	}
+
+	@Test(expected = IllegalArgumentException.class)
+	public void testSetInternalWithNullParameter() throws Exception {
+		Whitebox.setInternalState(null, "state", new Object());
+	}
+
 	public void testFinalState() {
 		ClassWithInternalState state = new ClassWithInternalState();
 		String expected = "changed";
